# GNN-AID

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  requirements2.txt  requirements3.txt
demo/: back_explainers_demo.py  backend_demo.py  user_exp_example.py
docs/: .readthedocs.yaml  mock_imports.py
experiments/: CiteSeer_Eattack  CiteSeer_random  CiteSeer_reverse_eattack  CiteSeer_reverse_eattack_small_probs  CiteSeer_reverse_eattack_small_probs_2  Cora_eattack_reverse_smallprobs  Cora_reverse_eattack_correct_feat_prob  Cora_reverse_low_random  Cora_reverse_ultrasmall_random  EAttack_experiment.py  Explain_Defense_experiment.py  Explain_Defese_Results.py  GNNExplainerDIG_exp_example.py  GNNExplainerGEOM_exp_example.py  GradCAM_exp_example.py  GraphMask_exp_example.py  NeuralAnalysis_orig_exp_example.py  NeuralAnalysis_our_exp_example.py  PowerGraph_exp.py  ProtGNN_exp.py  attack_defense_exps.py  attack_defense_metric_test.py  attack_defense_test.py  backend_demo_ase.py  computation_graph.py  computers_eattack  computers_random_no_rewire  cora_reverse_random_correct_feat_prob  gat_cora_eattack  gat_photo  inds_citeseer.npy  inds_computers.npy  inds_cora.npy  inds_photo.npy  inds_pubmed.npy  interpretation_metrics_test.py  photo_retest_not_full  pubmed_eattack  sage_cora_eattack  sage_photo_eattack  (+4 more)
gnn_aid/: __init__.py
metainfo/: evasion_attack_parameters.json  evasion_defense_parameters.json  explainers_init_parameters.json  explainers_local_run_parameters.json  framework_parameters.json  functions_parameters.json  mi_attack_parameters.json  (+7 more)
(+510 files in other folders)
